env/cluster-addons/dedicated-ns/linkerd-stack/linkerd-viz/resources/linkerd-viz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-ingress
  namespace: linkerd-viz
  labels:
    name: linkerd-viz-ingress
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
spec:
  ingressClassName: nginx
  rules:
  - host: mk.linkerd-viz.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              name: http
